--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -296,100 +296,82 @@
 <!-- Lịch trình -->
 
 <!-- Giới thiệu ban tổ chức -->
-<!-- <div id="organizers" class="container-fluid">
+<div id="organizers" >
     <div class="container">
-        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <h5>ĐƠN VỊ TỔ CHỨC</h5>
             <div class="unit_logo">
                 <div class="row">
-             huhu           <div class="unit">
-                            <img class="UIT" src="{% static 'register/images/footer/UIT_white.png' %}">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                        <div class="unit">
+                            <img class="UIT" src="{% static 'register/images/footer/UIT.png' %}">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                         <div class="unit">
-                            <img class="HSV" src="{% static 'register/images/footer/Hoi_white.png' %}">
+                            <img class="HSV" src="{% static 'register/images/footer/HSV.png' %}">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-4">
                         <div class="unit">
-                            <img class="CS" src="{% static 'register/images/footer/CS_white.png' %}">
+                            <img class="CS" src="{% static 'register/images/footer/CS.png' %}">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12"></div>
-
-        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12"></div>
     </div>
-</div> -->
+</div>
 <!-- Giới thiệu ban tổ chức -->
+
+<!-- Giới thiệu nhà tài trợ -->
+<div id="sponsors">
+    <div class="container" style="border-top: 1px solid rgba(255,255,255,.2);">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <h5>ĐƠN VỊ TÀI TRỢ</h5>
+            <div class="unit_logo">
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                        <div class="unit">
+                            <img class="sponsor1" src="{% static 'register/images/footer/UIT.png' %}">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                        <div class="unit">
+                            <img class="sponsor2" src="{% static 'register/images/footer/UIT.png' %}">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                        <div class="unit">
+                            <img class="sponsor3" src="{% static 'register/images/footer/UIT.png' %}">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                        <div class="unit">
+                            <img class="sponsor4" src="{% static 'register/images/footer/UIT.png' %}">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Giới thiệu nhà tài trợ -->
 
 <!-- footer -->
 <footer>
     <div id="footer" class="container-fluid">
         <div class="container">
             <div class="row">
-                <!-- <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
-                    <div class="sponsor">
-                        <h5>ĐƠN VỊ TÀI TRỢ</h5>
-                        <div class="unit_logo">
-                            <div class="row">
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                                    <div class="unit">
-                                        <img class="sponsor_1" src="{% static 'register/images/footer/CS_white.png' %}">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                                    <div class="unit">
-                                        <img class="sponsor_2" src="{% static 'register/images/footer/CS_white.png' %}">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                                    <div class="unit">
-                                        <img class="sponsor_3" src="{% static 'register/images/footer/CS_white.png' %}">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
 
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <div class="organizers">
-                        <h5>ĐƠN VỊ TỔ CHỨC</h5>
-                        <div class="unit_logo">
-                            <div class="row">
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                                    <div class="unit">
-                                        <img class="UIT" src="{% static 'register/images/footer/UIT.png' %}">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                                    <div class="unit">
-                                        <img class="HSV" src="{% static 'register/images/footer/HSV.png' %}">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                                    <div class="unit">
-                                        <img class="CS" src="{% static 'register/images/footer/CS.png' %}">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h5>ĐƠN VỊ HỖ TRỢ</h5>
                     <div style="text-align: center; align-items: center;">
-                        <img style ="width: 20%;" src="{% static 'register/images/footer/Doan.png' %}" alt="">
+                        <img style ="width: 17%;" src="{% static 'register/images/footer/Doan.png' %}" alt="">
                     </div>
                 </div>
                 
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h5>LIÊN HỆ</h5>
                     <div class="contact">
                         <div class="row">
@@ -410,6 +392,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
