--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -220,7 +220,7 @@
 
 <!-- Lịch trình -->
 <div class="timeline" id="timeline">
-    <h1 class="head" style="margin: 40px 0 15px 20px; font-weight: bold;">Các mốc thời gian</h1>
+    <h1 class="head" style="margin: 40px 0 15px 20px; font-weight: bold;">Lịch trình cuộc thi</h1>
     <div class="container left">
         <div class="date"></div>
         <!-- <i class="icon fa fa-home"></i> -->
