--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -20,8 +20,13 @@
             </video>
         </div>
         <div class="carousel-item">
-            <img width="100%" src="{% static 'register/images/introduction/banner2.jpg' %}">
+            <video width="100%" autoplay muted loop >
+                <source src="{% static 'register/videos/GIF-LogoWeb.mp4' %}" type="video/mp4">
+            </video>
         </div>
+        <!-- <div class="carousel-item">
+            <img width="100%" src="{% static 'register/images/introduction/banner2.jpg' %}">
+        </div> -->
     </div>
     <a class="carousel-control-prev" href="#introduction_slider" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -180,14 +185,14 @@
             tiếp cận và ươm mầm nhân lực chất lượng cao. Để xem toàn bộ quy chế cuộc thi, vui lòng truy cập
             <a style ="color:#68da23;" target="_blank" href="https://drive.google.com/file/d/18HSf-HGNfVJ7n-1VgzJE8dK432zxVYEm/view?fbclid=IwAR0MPHt7q4ICpRiT139EYRU_Grxo12-XEmBh1YGP9Bvv-M5oeLNy9QL5H3c">tại đây</a>.</p> -->
             <p style="text-align: justify; margin-bottom: 10px;">
-                Trong tháng 05/2022 này, Liên chi Hội khoa Khoa học Máy tính (LCH KHMT) đã quyết định mang UIT ACM (cuộc thi lập trình thuật toán danh giá nhất của UIT) trở lại với một cái tên cũng như diện mạo hoàn toàn mới đó là UIT COLLEGIATE PROGRAMMING CONTEST (UCPC), cuộc thi sẽ kế thừa hoàn toàn những giá trị truyền thống của 11 mùa UIT ACM trước đây. Bước đổi mới này nhằm khẳng định lại vai trò, vị trí cũng như xác định phương hướng phát triển cho cuộc thi lập trình thuật toán danh giá nhất của UIT.
+                Trong tháng 05/2022 này, <b>Liên chi Hội khoa Khoa học Máy tính (LCH KHMT)</b> đã quyết định mang <b>UIT ACM (Cuộc thi lập trình thuật toán danh giá nhất của UIT)</b> trở lại với một cái tên cũng như diện mạo hoàn toàn mới đó là <b>UIT COLLEGIATE PROGRAMMING CONTEST (UCPC)</b>, cuộc thi sẽ kế thừa hoàn toàn những giá trị truyền thống của 11 mùa <b>UIT ACM</b> trước đây. Bước đổi mới này nhằm khẳng định lại vai trò, vị trí cũng như xác định phương hướng phát triển cho <b>Cuộc thi lập trình thuật toán danh giá nhất của UIT</b>.
             </p>
             <p style="text-align: justify; margin-bottom: 10px;">
-                UCPC được tổ chức dựa trên format của cuộc thi lập trình thi đấu nổi tiếng thế giới ICPC, với mục đích khuyến khích, đẩy mạnh phong trào học thuật, cũng như tạo ra sân chơi giữa sinh viên trường Đại học Công nghệ Thông tin (ĐH CNTT) nói riêng và sinh viên các trường đại học, học sinh THPT có đam mê về lập trình thuật toán nói chung. Đây cũng là cơ hội để các bạn tiếp cận, nâng cao khả năng của mình trong lĩnh vực lập trình thi đấu, giúp các bạn có thể có những trải nghiệm trong môi trường lập trình thi đấu quốc tế. Đồng thời còn là dịp cho các doanh nghiệp tiếp cận và ươm mầm nhân lực chất lượng cao.
+                <b>UCPC</b> được tổ chức dựa trên format của <b>Cuộc thi lập trình thi đấu nổi tiếng thế giới ICPC</b>, với mục đích khuyến khích, đẩy mạnh phong trào học thuật, cũng như tạo ra sân chơi giữa sinh viên trường <b>Đại học Công nghệ Thông tin (ĐH CNTT)</b> nói riêng và sinh viên các trường đại học, học sinh THPT có đam mê về lập trình thuật toán nói chung. Đây cũng là cơ hội để các bạn tiếp cận, nâng cao khả năng của mình trong lĩnh vực lập trình thi đấu, giúp các bạn có thể có những trải nghiệm trong môi trường lập trình thi đấu quốc tế. Đồng thời còn là dịp cho các doanh nghiệp tiếp cận và ươm mầm nhân lực chất lượng cao.
             </p>
             <p style="text-align: justify;">
                 Để xem toàn bộ quy chế cuộc thi, vui lòng truy cập
-                <a style ="color:#4CF2D2;" target="_blank" href="https://drive.google.com/file/d/17Vly7HvPSQXLs-Pe_QmAFmkpAS_Ezrmq/view?usp=sharing"><b>tại đây</b></a>.
+                <a style ="color:#4CF2D2;" target="_blank" href="https://drive.google.com/file/d/1I4zuWOosgYRF1Tv-ATQm6JLfCmIrhAUh/view?usp=sharing"><b>tại đây</b></a>.
             </p>
     </div>
 </section>
@@ -381,29 +386,29 @@
                         </div>
                     </div>
                 </div>
-
+   
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <h5>ĐƠN VỊ HỖ TRỢ</h5>
                     <div style="text-align: center; align-items: center;">
-                        <img style ="width: 20%;" src="{% static 'register/images/footer/Doan.png' %}" alt="">
+                        <img style ="width: 24%;" src="{% static 'register/images/footer/Doan.png' %}" alt="">
                     </div>
                 </div>
                 
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <h5>LIÊN HỆ</h5>
-                    <div class="contact">
+                    <div class="contact" style="margin-top: 46px;">
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6 col-6">
                                 <div class="unit_fb">
                                     <a target="_blank" href="https://www.facebook.com/uit.ucpc">
-                                        <img src="{% static 'register/images/footer/fb.png' %}">
+                                        <img src="{% static 'register/images/footer/FB.png' %}">
                                     </a>
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 col-6">
                                 <div class="unit_gm">
                                     <a target="_blank" href="mailto:ucpc@uit.edu.vn">
-                                        <img style="width: 50px"; src="{% static 'register/images/footer/gmail.png' %}">
+                                        <img src="{% static 'register/images/footer/Gmail.png' %}">
                                     </a>
                                 </div>
                             </div>
