--- a/register/templates/login/login.html
+++ b/register/templates/login/login.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container" style="margin-top: 15px;">
-	<h3 style="font-weight: bold; margin-bottom: 20px;">Đăng nhập</h3>
+	<h1 style="font-weight: bold; margin-bottom: 40px;;">Đăng nhập</h1>
 </div>
 
 {% for message in messages %}
@@ -17,7 +17,12 @@
 		<!-- <form action="{% url 'register:login' %}" method="POST"> -->
 		<form method="POST">
 			{% csrf_token %}
-			{{ lf.as_p }}
+
+			<b style="font-size: 20px;">{{ lf.email.label }}</b><br>
+			{{ lf.email }}<br>
+			<b style="font-size: 20px;">{{ lf.password.label }}</b><br>
+			{{ lf.password }}
+
 			<input id="checkbox_login" type="checkbox" style="margin: 10px 5px 10px 0;" onclick="showLoginPassword()">Hiển thị mật khẩu<br>
 			<button type="submit" class="btn btn-primary" style = "margin-top: 15px; background-color: #4CF2D2; border-color: #4CF2D2; color: black;">Đăng nhập</button>
 		</form>
