--- a/register/templates/login/profile.html
+++ b/register/templates/login/profile.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container" style="margin-top: 15px;">
-	<h3>Hồ sơ</h3>
+	<h1>Hồ sơ</h1>
 </div>
 
 {% for message in messages %}
@@ -44,19 +44,19 @@
 			<th>Trường</th>
 		</tr>
 		<tr>
-			<td>{{ item.member1 }}</td>
+			<td style="text-align: left;">{{ item.member1 }} (trưởng)</td>
 			<td>{{ item.cmnd1 }}</td>
 			<td>{{ item.phone1 }}</td>
 			<td>{{ item.school1 }}</td>
 		</tr>
 		<tr>
-			<td>{{ item.member2 }}</td>
+			<td style="text-align: left;">{{ item.member2 }}</td>
 			<td>{{ item.cmnd2 }}</td>
 			<td>{{ item.phone2 }}</td>
 			<td>{{ item.school2 }}</td>
 		</tr>
 		<tr>
-			<td>{{ item.member3 }}</td>
+			<td style="text-align: left;">{{ item.member3 }}</td>
 			<td>{{ item.cmnd3 }}</td>
 			<td>{{ item.phone3 }}</td>
 			<td>{{ item.school3 }}</td>
@@ -69,19 +69,26 @@
 
 <hr>
 <div class="container">
-	<h4>Thanh Toán</h4>
 	<div class="row" style="margin-bottom: 40px;">
-		<div class="col-sm-12 col-md-6 col-lg-6">
-			<p>MOMO: 0703482103 - Huynh Thi My Duyen</p>
-			<p>Nội Dung: Tên đội - Nộp Lệ Phí UCPC 2022</p>
-			<p>Lệ Phí: 90.000 đồng/Đội</p>
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+			<h4>Thanh Toán</h4>
+			<p><b>MOMO:</b> 0703482103 - Huỳnh Thị Mỹ Duyên</p>
+			<p><b>STK:</b> MB BANK - 0703482103 - Huỳnh Thị Mỹ Duyên </p>
+			<p><b>Lệ Phí:</b> 90.000 VNĐ/Đội</p>
+			<p><b>Nội dung chuyển khoản:</b> [Tên đội] - [Tên đội trưởng] - UCPC</p>
+			<p><b>Ví dụ:</b> TEAM1 Nguyễn Văn A UCPC</p>
 		</div>
-		<div class="col-sm-12 col-md-6 col-lg-6">
-			<img src="{% static 'register/images/MOMO/MOMO.jpg' %}" style="width:150px; margin-top: 10px;">
+		<div id="trans_infor" class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="display: flex; flex-direction: row; justify-content: end;">
+			<div style="margin-right: 40px;">
+				<img src="{% static 'register/images/MOMO/momo.png' %}" style="width:150px	; margin-top: 10px; width: 100px;">
+				<p style="margin-top: 10px; text-align: center;"><b>MOMO</b></p>
+			</div>
+			<div>
+				<img src="{% static 'register/images/MOMO/bank.png' %}" style="width:150px; margin-top: 10px; width: 100px;">
+				<p style="margin-top: 10px; text-align: center;"><b>MB BANK</b></p>
+			</div>
 		</div>
-		
 	</div>
-	
 </div>
 {% endif %}
 
