--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -20,9 +20,10 @@
             </video>
         </div>
         <div class="carousel-item">
-            <video width="100%" autoplay muted loop >
-                <source src="{% static 'register/videos/GIF-LogoWeb.mp4' %}" type="video/mp4">
-            </video>
+            <img src="{% static 'register/videos/ACMtoUCPC-webgif.gif' %}" alt="this slowpoke moves" width="100%">
+            <!-- <video width="100%" autoplay muted loop >
+                <source src="{% static 'register/videos/ACMtoUCPC-webgif.gif' %}" type="video/mp4">
+            </video> -->
         </div>
         <!-- <div class="carousel-item">
             <img width="100%" src="{% static 'register/images/introduction/banner2.jpg' %}">
