--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -20,7 +20,7 @@
             </video>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'register/videos/ACMtoUCPC-webgif.gif' %}" alt="this slowpoke moves" width="100%">
+            <img src="{% static 'register/videos/ACMtoUCPC-webgif.gif' %}" width="100%">
             <!-- <video width="100%" autoplay muted loop >
                 <source src="{% static 'register/videos/ACMtoUCPC-webgif.gif' %}" type="video/mp4">
             </video> -->
