--- a/register/templates/login/profile.html
+++ b/register/templates/login/profile.html
@@ -24,7 +24,7 @@
 	{% if item.paid == True %}
 		<span style="color: #4cf2d2;">Đã thanh toán</span>
 	{% else %}
-		<span style="color: #fcf951ff;">Chưa thanh toán</span>
+		<span style="color: #fcf951ff;">Chưa thanh toán (Cập nhật sau 24h)</span>
 	{% endif %}
 	<br>
 	{% endfor %}
